# show_dialog

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml  tasks.py
.github/workflows/: build-app.yml  build-asset.yml  linting.yml  release.yml  tests.yml  update-gh-pages.yml
assets/: app.yaml  ipc.json  ipc.yaml  pyinstaller.spec  resources.qrc  style.css
assets/inputs/: README.md  inputs_01.json  inputs_06.yaml  inputs_07.yaml  inputs_10.yaml  inputs_11.yaml
assets/stylesheets/: style_01.css
assets/ui/: show_dialog.ui
development/: index.html
docs/: development.md  index.md  inputs.md  ipc.md  usage.md
inputs/: index.html
ipc/: index.html
search/: search_index.json
src/: config.py  inputs.py  main.py  update.py
src/show_dialog/: __init__.py  config.py  data_class.py  exit_code.py  inputs.py  main.py  style.py  update.py  utils_qt.py
src/show_dialog/ipc/: client.py  ipc_params.py  message.py  server.py
src/show_dialog/ui/: show_dialog.py
src/show_dialog/ui/forms/: README.md  resources_rc.py  ui_show_dialog.py
src/ui/: show_dialog.py
src/ui/forms/: README.md  resources_rc.py  ui_show_dialog.py
tests/: test_inputs.py  test_show_dialog.py
tests/assets/: resources.qrc
tests/libs/: README.md  config.py  fixtures.py  resources_rc.py
tests/tests/: test_inputs.py  test_utils_qt.py
tests/tests/ipc/: test_message.py
tests/tests/ui/: test_show_dialog.py
usage/: index.html
